Inclusao no Jupyter da apresentação

--- a/Estudo Enem x Educação Básica.ipynb
+++ b/Estudo Enem x Educação Básica.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -36,16 +36,8 @@
      "output_type": "stream",
      "text": [
       "SQL Server\n",
-      "Oracle em OraDB19Home1\n",
-      "Oracle em OraDB18Home1\n",
-      "Oracle em OraDB12Home1\n",
-      "Oracle em OraDB12Home2\n",
-      "Oracle em OraDB12Home3\n",
-      "SQL Server Native Client 11.0\n",
-      "SQL Server Native Client RDA 11.0\n",
-      "ODBC Driver 13 for SQL Server\n",
-      "ODBC Driver 17 for SQL Server\n",
-      "MySQL ODBC 5.1 Driver\n"
+      "MySQL ODBC 8.0 ANSI Driver\n",
+      "MySQL ODBC 8.0 Unicode Driver\n"
      ]
     }
    ],
@@ -5517,6 +5509,31 @@
    "source": [
     "pd.DataFrame(campos_enem)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_excel('tabelafonte.xlsx', sheetname=\"sheet1\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.size()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -5535,7 +5552,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
